# parallel-computing

./: CMakeLists.txt  README.md  build.sh  run.sh
src/boost-mpi-pi-calculation/: CMakeLists.txt
src/boost-mpi-pi-calculation/src/: main.cpp
src/cuda-dot-product/: CMakeLists.txt
src/cuda-dot-product/include/: interfaces.hpp
src/cuda-dot-product/src/: kernel.cu  main.cpp
src/intrinsics/: CMakeLists.txt
src/intrinsics/src/: main.cpp
src/mpi-dot-product/: CMakeLists.txt  mpi-dot-product.sbatch
src/mpi-dot-product/src/: main.cpp
src/mpi-pi-calculation/: CMakeLists.txt
src/mpi-pi-calculation/src/: main.cpp
src/openmp/: CMakeLists.txt
src/tools/: CMakeLists.txt  tools2.hpp
src/tools/include/: benchmark.hpp  mpi.hpp  pi_helpers.hpp
src/tools/src/: mpi.cpp  pi_helpers.cpp
